Bug 75604 - File Corruption: Issue related to the nested <mc:AlternateContent> in document.xml
Summary: File Corruption: Issue related to the nested <mc:AlternateContent> in documen...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: IA64 (Itanium) Linux (All)
: medium normal
Assignee: Yogesh Bharate
URL:
Whiteboard: target:4.3.0 target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-28 11:16 UTC by Yogesh Bharate
Modified: 2021-03-24 12:39 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
document contains nested text boxes (22.34 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-02-28 11:16 UTC, Yogesh Bharate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yogesh Bharate 2014-02-28 11:16:13 UTC
Created attachment 94873 [details]
document contains nested text boxes

Problem description:
1. document contains the text boxes (some are nested text box)
2. In document.xml, nested AlternateContent present.
3. Due to this the file get corrupted and gives  error "You cannot put drawing object into the text box, callout, comment, footnote or endnote" while opening file in MS Office 2010 word.

Steps to reproduce:
1. Open the file in LibreOffice
2. Click File -> Save As (Microsoft Word 2007/2010 (.docx))
3. Open saved file in MS Office

Expected:
File should open without any error.

Actual:
File corrupt dialog is shown
Comment 1 Commit Notification 2014-03-17 09:16:30 UTC
YogeshBharate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6415f3e7ab6a7728d44dbb49c1486ac9ca649a17

fdo#75604: File Corruption - Issue related to the nested AlternateContent.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 darshan.gandhi 2014-03-18 13:43:59 UTC
Issue related with nested <mc:AlternateContent> is not more exist so closing this issue.
Comment 3 Commit Notification 2021-03-24 12:39:54 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/34e80d904054a0752e43a84aabe6d705fd437030

tdf#141173 docx export: revert fdo#75604: File Corruption

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.