fdo#75604: File Corruption - Issue related to the nested AlternateContent.

Problem Description:
- If the document contains, text box & group shape having
  text, after roundtrip file get corrupted.
- Due this the text box exported inside the another group shape.
(i.e nested alternateContent which is not allowed in MS office 2010.)

Implementation:
- Use the variable which avoid the nested alternateContent.
- This keeps the various text frame on same level in different
  run.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/8555

Change-Id: Ia18eb2b8cf17a451ebe344a811efae1328134215